wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
/* ... */
body, button, input, select, textarea,
.site-header .site-title {
	font-family: 'Open Sans', sans-serif;
	font-size: var(--wp--preset--font-size--normal);
}

p, ul, ol,
#primary,
#secondary aside {
	font-size: inherit;
}

.rtl ul,
.rtl ol {
	margin-left: 0;
	margin-right: 25px;
}

h1 {
	font-size: 1.8em;
}

h2 {
	font-size: 1.6em;
}

h3 {
	font-size: 1.4em;
}

h4 {
	font-size: 1.2em;
}

.entry-content .reports.ticket-reports {
	font-size: var(--wp--preset--font-size--small);
}

table {
/* tables still need 'cellspacing="0"' in the markup */
	border-collapse: separate;
	border-spacing: 0;
	border: 1px solid #eee;
}

thead {
	background: #eee;
}

caption,
th,
td {
	font-weight: 400;
	text-align: left;
}

td {
	border-bottom: 1px solid #eee;
	padding: 10px;
}

.entry-content h3 + h4 {
	margin-top: 1em;
}

.entry-content p a {
	word-wrap: break-word;
}

.entry-content td,
.entry-content th {
	padding: 1em !important;
}

.entry-content th,
#primary thead td,
#primary thead th {
    font-weight: bold;
}

td:first-of-type {
	width: 30%;
	border-right: 1px solid #eee;
}

tr:last-of-type td {
	border-bottom: 0;
}

/* wp4.css overrides */
p a,
p a:hover {
	border-bottom: none;
}

input[type="submit"] {
	height: auto;
}

/*
 * 2021 global header/footer
 */
.wp-block-group.global-header button,
.wp-block-group.global-header input[type="button"],
.wp-block-group.global-header input[type="reset"],
.wp-block-group.global-header input[type="submit"] {
	/* Revert styles that should only apply to the content area. */
	border-radius: revert;
	box-shadow: revert;
	text-shadow: revert;
}

.wp-block-group.global-header button:focus,
.wp-block-group.global-header input[type="button"]:focus,
.wp-block-group.global-header input[type="reset"]:focus,
.wp-block-group.global-header input[type="submit"]:focus {
	/* Bring back the browser focus style */
	outline: revert;
}

.wp-block-group.global-header p,
.wp-block-group.global-header ul,
.wp-block-group.global-header ol {
	/* Revert styles that should only apply to the content area. */
	font-size: revert;
	line-height: revert;
}

/* Gutenberg overrides */

.wp-block-embed figcaption,
.wp-block-image figcaption,
.wp-block-video figcaption {
	margin: 0.5em 2em 1em;
	font-style: italic;
	text-align: center;
}

/* site */

.site,
.custom-menu .site,
.site-branding {
	box-sizing: border-box;
	margin: 0 auto;
	max-width: 1024px;
	padding: 0 10px;
}

.site-header {
	background: #0073aa;
	float: none;
	margin: 0 0 4em;
	padding: 18px 0;
	width: auto;
}

.site-header .site-branding {
	height: 32px;
}

.site-header .site-title {
	line-height: 1;
	margin: 0;
	padding: 0;
}

.site-header .site-title a {
	color: #fff;
	font-size: 28px;
	font-weight: 300;
	line-height: 1;
}

.no-sidebar .site-header {
	background: #0073aa;
}

.no-sidebar .site-header .hgroup {
	text-align: unset;
}

.no-sidebar .site-header .site-title {
	font-size: unset;
}

@media (max-width: 510px) {
	.site-header .site-title {
		margin-top: 4px;
	}
	.site-header .site-title a {
		font-size: 17px;
		font-size: 4.5vw;
	}
}

@media (max-width: 400px) {
	.site-header .site-title {
		max-width: 295px;
	}
}

@media (max-width: 320px) {
	.site-header .site-title {
        max-width: 240px;
	}
    .site-header .site-title a {
		font-size: 13px;
		font-size: 4.2vw;
	}
}

.site-header .site-title a:hover {
	color: rgba( 255, 255, 255, 0.8 );
}

.navigation-main {
	background: transparent;
	position: static;
	max-width: 940px;
	height: 32px;
	margin: -32px auto 0 auto;
	text-align: right;
	padding: 0;
}

.navigation-main .menu {
	line-height: 32px;
}

.navigation-main ul li {
	display: inline-block;
	float: none;
	margin-right: 21px;
}

.rtl .navigation-main ul li {
	margin-left: 21px;
	margin-right: 0;
}

.navigation-main ul li:last-of-type {
	margin: 0;
}

.navigation-main ul li a {
	padding: 0;
}

.navigation-main ul li:hover > a,
.navigation-main ul li.current-menu-item a,
.navigation-main ul li.current-menu-item:hover a {
	background: transparent;
}

.navigation-main ul li:hover > a:after,
.navigation-main ul li.current-menu-item a:after,
.navigation-main ul li.current-menu-item:hover a:after {
	content: '';
	display: block;
	border-bottom: 1px solid #fff;
	position: relative;
	top: -6px;
}

.navigation-main ul li.icon a:after {
	display: none;
}

.navigation-main ul li:hover > a {
	border-bottom: none;
}

.navigation-main a,
.navigation-main a:visited {
	color: rgba(255, 255, 255, 0.8);
	font-size: 0.75em;
}

.wporg-make .site-title a:before,
body.wporg-make #headline h2 a:before {
	vertical-align: middle; /* overrides wp4.css */
}

/* Adjustments for teams with SVG icons. */
.wporg-make.make-openverse .site-title a::before,
.wporg-make.make-performance .site-title a::before {
	content: '';
	width: 0;
}
.site-title svg {
	height: 30px;
	width: 30px;
	vertical-align: middle;
}

#secondary-content .navigation-main {
	margin-top: 32px;
	text-align: left;
}

#secondary-content .navigation-main ul li {
	display: block;
	float: left;
	width: 100%;
}

#secondary-content .navigation-main a {
	color: #0073aa;
}

#secondary-content .navigation-main ul li:hover > a,
#secondary-content .navigation-main ul li.current-menu-item a {
}

/*
 * p2-breathe/style.css overrides
 */
body {
	line-height: 1.5;
}

ul ul, ul ol,
ol ol, ol ul {
	font-size: inherit;
}

a,
a:visited,
a:active,
.entry-meta .entry-actions:hover a,
.entry-meta .entry-actions:hover a:visited,
.comment-meta .comment-actions:hover a,
.comment-meta .comment-actions:hover a:visited,
#help dt,
#media-buttons .button,
.responsive-link,
.entry-meta .entry-date:hover,
.comment-meta .comment-date:hover,
.o2-xpost-entry-date:hover,
.o2-comment-actions ul li a:before,
.o2-comment-actions ul li a span {
	color: #0072a9;
}

.entry-meta .entry-date,
.entry-meta .entry-actions,
.entry-meta .entry-tags,
.comment-meta .comment-date,
.comment-meta .comment-actions,
.o2-reply-count {
	color: #555;
}
/* ... */

